Update provider resource flows
